--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ gravatar = "26221df5145bdf54af1c406561c5a95f"
 cachebuster = true
 dateform = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
-description = "Yep."
+description = "Software Engineer at Modus Create"
 email = "tabrindle@gmail.com"
 faviconfile = "img/leaf.ico"
 github = "//github.com/tabrindle"
